<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_table_title"
    android:orientation="horizontal"
    android:weightSum="9">

    <TextView
        android:id="@+id/tv_00"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/machine_title_name"
        android:textColor="@color/title_dark"
        android:textSize="@dimen/machine_title_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/split_table_title" />

    <TextView
        android:id="@+id/tv_01"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/machine_status"
        android:textColor="@color/title_dark"
        android:textSize="@dimen/machine_title_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/split_table_title" />

    <TextView
        android:id="@+id/tv_02"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/machine_quailty_out"
        android:textColor="@color/title_dark"
        android:textSize="@dimen/machine_title_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/split_table_title" />

    <com.android.tedcoder.material.view.MarqueeTextView
        android:id="@+id/tv_03"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:text="@string/machine_order"
        android:textColor="@color/title_dark"
        android:textSize="@dimen/machine_title_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/split_table_title" />

    <TextView
        android:id="@+id/tv_06"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/machine_order_number"
        android:textColor="@color/title_dark"
        android:textSize="@dimen/machine_title_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/split_table_title" />

    <TextView
        android:id="@+id/tv_07"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/machine_true_number"
        android:textColor="@color/title_dark"
        android:textSize="@dimen/machine_title_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/split_table_title" />

    <TextView
        android:id="@+id/tv_08"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/machine_true_cometrue"
        android:textColor="@color/title_dark"
        android:textSize="@dimen/machine_title_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/split_table_title" />

</LinearLayout>



