<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_table_title"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/material_name"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/material_value"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_inouttime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/intime_value"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_content_drak"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_a01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_blue"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_a01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_green"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_intime_a01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_content_light"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_a02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_blue"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_a02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_green"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_intime_a02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_content_drak"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_a03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_blue"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_a03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_green"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_intime_a03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_content_light"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_a04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_blue"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_a04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_green"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_intime_a04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_content_drak"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_a05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_blue"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_a05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_green"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_intime_a05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_content_light"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_a06"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_blue"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_a06"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_green"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_intime_a06"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_content_drak"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_a07"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_blue"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_data_a07"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/title_green"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_intime_a07"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/title_dark"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/split_table_title" />
    </LinearLayout>


</LinearLayout>